creation of authentication, login and logout context

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
 
     <title>DoWhile 2021</title>
+    <link rel="icon" type="image/png" href="./src/assets/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
